# physfs

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/physfs/appfs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/physfs/: bridge.java
app/src/main/java/com/physfs/appfs/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/physfs/appfs/: ExampleUnitTest.java
java/com/physfs/: PhysFSWrapper.java
jni/: Android.mk  com_physfs_PhysFSWrapper.cpp
jni/PhysFSWrapper/: Android.mk  com_physfs_PhysFSWrapper.cpp  com_physfs_PhysFSWrapper.h
jni/physfs/: Android.mk  com_physfs_PhysFSWrapper.h
jni/physfs_static/: Android.mk
src/: physfs_jni.cpp
src/platform/: android.c  posix.c  unix.c
